manifests/java-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: $APP_NAME
  namespace: my-app
spec:
  selector:
    matchLabels:
      app: $APP_NAME
  replicas: 3
  template:
    metadata:
      labels:
        app: $APP_NAME
    spec:
      imagePullSecrets:
      - name: aws-registry-key
      containers:
      - name: $APP_NAME
        image: $DOCKER_REPO:$IMAGE_NAME
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: java-app-service
  namespace: my-app
spec:
  selector:
    app: $APP_NAME
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
